Fix more stuff! Scales well on mobile, plus new logos.

--- a/css/app.css
+++ b/css/app.css
@@ -58,8 +58,8 @@ aside {
 	z-index: 20;
 }
 .orange-bar:hover {
-	background: 3D5C6D
+	background: #3D5C6D
 }
 .dragdealer .disabled {
-	background: 183646
+	background: #183646
 }
